# EditAcademy3D

./: .clang-format  .gitignore  CMakeLists.txt  History.md  Info.md  README.md  glfw.cpp  main.cpp
CMake/: FindSFML.cmake
cmakemodules/: FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindJSONCPP.cmake  FindRAPIDJSON.cmake  myFindJSONCPP.cmake
ea3dmain/: CMakeLists.txt  setting.ini  setting.json  setting2.json
ea3dmain/include/: Ea3dGLHandler.hpp  Ea3dInit.hpp  Ea3dMeshLoader.hpp  Ea3dPayload.hpp  Ea3dPlatform.hpp  Ea3dRenderPipeline.hpp  Ea3dResource.hpp  Ea3dShaderLoader.hpp  Ea3dUtil.hpp  ModelPayload.hpp  ObjFileReader.hpp  Trivail.hpp
ea3dmain/resources/: settings.ini
ea3dmain/shaders/: sample.frag  sample.fs  sample.vert  sample.vs  shaderToySample.frag  shaderToySample.vert
ea3dmain/src/: CMakeLists.txt  Ea3dGLHandler.cpp  Ea3dInit.cpp  Ea3dPayload.cpp  Ea3dPlatform.cpp  Ea3dRenderPipeline.cpp  Ea3dResource.cpp  Ea3dShaderLoader.cpp  Ea3dUtil.cpp  ModelPayload.cpp  ObjFileReader.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
